--- a/movie_app/public/index.html
+++ b/movie_app/public/index.html
@@ -22,7 +22,7 @@
 
       Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
       work correctly with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
+      Learn how configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
   </head>
